+++++++++++
Python News
+++++++++++

What's New in Python 3.4.1?
===========================

Library
-------

- Issue #19748: On AIX, time.mktime() now raises an OverflowError for year
  outsize range [1902; 2037].


What's New in Python 3.4.0 release candidate 2?
===============================================

Release date: 2014-02-23

Core and Builtins
-----------------

- Issue #20261: In pickle, lookup __getnewargs__ and __getnewargs_ex__ on the
  type of the object.

- Issue #20619: Give the AST nodes of keyword-only arguments a column and line
  number.

- Issue #20526: Revert changes of issue #19466 which introduces a regression:
  don't clear anymore the state of Python threads early during the Python
  shutdown.

- Issue #20595: Make getargs.c C89 compliant.

- Issue #20625: Parameter names in __annotations__ were not mangled properly.
  Discovered by Jonas Wielicki, patch by Yury Selivanov.

Library
-------

- Issue #20710: The pydoc summary line no longer displays the "self" parameter
  for bound methods.

- Issue #20654: Fixed pydoc for enums with zero value.  Patch by Vajrasky Kok.

- Issue #20635: Fixed grid_columnconfigure() and grid_rowconfigure() methods of
  Tkinter widgets to work in wantobjects=True mode.

- Issue #19612: On Windows, subprocess.Popen.communicate() now ignores
  OSError(22, 'Invalid argument') when writing input data into stdin, whereas
  the process already exited.

- Issue #20320: select.select() and select.kqueue.control() now round the
  timeout aways from zero, instead of rounding towards zero.

- Issue #20616: Add a format() method to tracemalloc.Traceback.

- Issue #19744: the ensurepip installation step now just prints a warning to
  stderr rather than failing outright if SSL/TLS is unavailable. This allows
  local installation of POSIX builds without SSL/TLS support.

- Issue #6815: os.path.expandvars() now supports non-ASCII environment
  variables names and values.
